--- a/dropdown.html
+++ b/dropdown.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Title of the document</title>
-</head>
+
 
 <div id="main-menu"> 
 
@@ -42,7 +38,7 @@
             </div>
     </div>
 
-    <div class="dropdown">
+    <div class="dropdown-level-1">
         <button class="dropbtn">Additional Info </button> <!-- 1st Level Navigation -->
             <div class="dropdown-content-level-1"> <!-- 2nd Level Navigation -->
                 <a href="#">Link 1</a>  <!-- 2nd Level Links -->
@@ -50,15 +46,117 @@
                 <a href="#">Link 3</a>
             </div>
 
-                <div class="dropdown-content-level-2"> <!-- 2nd Level Navigation -->
-                    <a href="#">Link 1</a>  <!-- 2nd Level Links -->
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </div>
+             <div class="dropdown-content-level-2"> <!-- 2nd Level Navigation -->
+                <a href="#">Link 1</a>  <!-- 2nd Level Links -->
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
     </div>
 
 </div>
 
-</body>
+<style>
 
-</html>
+/* Menu Wrapper */
+
+#main-menu
+{
+    background:#019AE9;
+}
+
+/* Dropdown Button */
+
+.dropbtn 
+{
+    background:transparent;
+  border-bottom:none;
+  border-image:initial;
+  border-left:none;
+  border-right:1px solid white;
+  border-top:none;
+  color:white;
+  cursor:pointer;
+  font-size:14px;
+  padding:0 10px;
+  text-transform:uppercase;
+}
+
+/* The container <div> - needed to position the dropdown content */
+
+.dropdown 
+{
+    display:inline-block;
+    padding:10px 0;
+    position:relative;
+}
+
+
+.dropbtn:hover
+{
+    background:black;
+}
+
+/* Dropdown Content (Hidden by Default) */
+
+.dropdown-content-level-1
+{
+    background-color:#34AEF0;
+    box-shadow:rgba(0, 0, 0, 0.2) 0 8px 16px 0;
+    display:none;
+    position:absolute;
+    top:40px;
+    width:101%;
+    z-index:1;
+
+}
+
+.dropdown-content-level-2
+{
+    background-color:#34AEF0;
+    box-shadow:rgba(0, 0, 0, 0.2) 0 8px 16px 0;
+    display:none;
+    position:absolute;
+    top:40px;
+    width:101%;
+    z-index:1;
+    top:60px;
+    left:144px;
+}
+
+/* Links inside the dropdown */
+
+.dropdown-content-level-1 a,
+.dropdown-content-level-2 a 
+{
+    color: black;
+    padding:10px;
+    text-decoration: none;
+    display: block;
+    color:white;
+    border-right:1px solid white;
+}
+
+/* Change color of dropdown links on hover */
+
+.dropdown-content-level-1 a:hover,
+.dropdown-content-level-2 a:hover  
+{
+    background-color: #019ae9;
+}
+
+/* Show the dropdown menu on hover */
+
+.dropdown:hover .dropdown-content-level-1,
+.dropdown:hover .dropdown-content-level-2
+{
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+
+.dropdown:hover .dropbtn 
+{
+    background-color: #019AE9;
+}
+
+</style>
